# ai-data-science-playground

./: .gitignore  README.md  pyproject.toml
ai/: Build_RAG_with_milvus_Gemini.ipynb  RAG_with_milvus.ipynb  evaluate_llms.ipynb
data-science/: titanic_test_models.ipynb
