[project]
name = "ai-data-science-playground"
version = "0.1.0"
description = "AI and Data Science Playground"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "keras>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
